# vitrinsShop

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  main.py  nginx.conf  pyproject.toml  robots.txt  sitemap.xml
static/css/: style.css
templates/: index.html
